--- a/css/cards.css
+++ b/css/cards.css
@@ -1,4 +1,5 @@
 .card {
+  position: relative;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
@@ -6,15 +7,22 @@
   box-shadow: 0 4px 8px 0 grey;
   background-color: #b9b3a9;
   border-radius: 5px;
-  transition: 0.3s;
   padding: 40px 40px;
-  margin: 20px;
+  margin: 40px;
   opacity: 100%;
   color: #000;
 }
 
 .card:hover {
   opacity: 100%;
+}
+
+.card img {
+  position: absolute;
+  width: 60px;
+  height: auto;
+  top: -20px;
+  right: 15px;
 }
 
 .question {
