--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,5 @@
 header {
+  position: absolute;
   font-style: bold;
   position: fixed;
   background-color: #b9b3a9;
@@ -8,6 +9,7 @@ header {
   padding: 5px;
   text-align: center;
   border: 1px solid #202020;
+  z-index: 1;
 }
 
 img {
