--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+  overflow: auto;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -22,7 +23,7 @@
 
 /* Current/active navbar link */
 .navbar .active {
-  background-color: rgb(63, 32, 32);
+  background-color: goldenrod;
 }
 
 ul {
