--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,15 @@
 }
 
 body {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
   font-family: sans-serif;
-  background-color: #b9b3a9;
-  background-image: url("resources/Taylor-Swift-Eras-Tour.jpg");
+  /* background-color: #b9b3a9; */
+  background-image: url("../resources/Taylor-Swift-Eras-Tour.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 100vh;
 }
 
 main {
