seperate global css

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,26 +3,4 @@
 @import "navbar.css";
 @import "bookmark-page.css";
 @import "profile-page.css";
-@import "css/switch.css";
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  /* display: flex;
-  justify-content: center; */
-  font-family: sans-serif;
-  /* background-color: #b9b3a9; */
-  background-image: url("../resources/Taylor-Swift-Eras-Tour.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  min-height: 100vh;
-}
-
-main {
-  margin: 70px;
-}
+@import "global.css";
